Properly XML-escaped autogenerated xml files

--- a/schemas/events.xml.erb
+++ b/schemas/events.xml.erb
@@ -9,6 +9,7 @@
   # everyday from d1 to d2
   d1.step(d2, 1) do |d| %>
     <event refgrp="<%= rand(2) + 1 %>">
+      <title><%= `fortune | xml esc`.strip.split.shift(5).join(' ') %></title>
       <from><%= d.strftime('%Y-%m-%d %H:%M') %></from>
       <to><%= (d + Date::Delta.hours(3)).strftime('%Y-%m-%d %H:%M') %></to>
       <location>location<%= rand(3) %></location>
@@ -22,6 +23,7 @@
 
     <% d += Date::Delta.hours(5) %>
     <event refgrp="<%= rand(2) + 1 %>">
+      <title><%= `fortune | xml esc`.strip.split.shift(5).join(' ') %></title>
       <from><%= d.strftime('%Y-%m-%d %H:%M') %></from>
       <to><%= (d + Date::Delta.hours(3)).strftime('%Y-%m-%d %H:%M') %></to>
       <location>location<%= rand(3) %></location>
@@ -32,7 +34,6 @@
       <% end %>
       <% end %>
     </event>
-
 <% end %>
 </events>
 
