--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -6,5 +6,8 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="{{ asset('js/jquery-1.5.1.min.js') }}" type="text/javascript" ></script>
+        <script src="{{ asset('js/jquery.tmpl.min.js') }}" type="text/javascript" ></script>
+        <script src="{{ asset('js/calendar.js') }}" type="text/javascript" ></script>
     </body>
 </html>
