--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{% block title %}Hello Application{% endblock %}</title>
+        <link type="text/css" rel="stylesheet" href="{{ asset('css/calendar.css') }}">
     </head>
     <body>
         {% block body %}{% endblock %}
