UserBundle version2, correction des bugs sur l'avatar etc...

--- a/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
+++ b/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
@@ -3,7 +3,7 @@
 
 <h1> Bienvenue {{firstname}} {{surname}}</h1>
 
-<img src="{{ image}}" alt="avatar" />
+<img src="{{ asset('uploads/avatar/')}}{{image}}" alt="avatar" />
 
 
 <li><a href="{{ path('Edituser') }}">Editer profil</a></li>
