--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -6,9 +6,10 @@
         <link type="text/css" rel="stylesheet" href="{{ asset('css/calendar.css') }}">
     </head>
     <body>
-        {% block body %}{% endblock %}		
+        {% block body %}{% endblock %}
         <script src="{{ asset('js/jquery-1.5.1.min.js') }}" type="text/javascript" ></script>
         <script src="{{ asset('js/jquery.tmpl.min.js') }}" type="text/javascript" ></script>
+        <script src="{{ asset('js/jquery-ui-1.8.11.custom.min.js') }}" type="text/javascript" ></script>
         <script src="{{ asset('js/calendar.js') }}" type="text/javascript" ></script>
     </body>
 </html>
