--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -9,18 +9,105 @@ ul, li {
 |_|\__,_|\__, |\___/ \__,_|\__|
          |___/                 
 */
-#logo {
-    height: 100px;
-    width:100px;
+#logo > img{
+    border: 3px solid black;
+    height: 150px;
+    position: absolute;
+    top: 0px;
+    width:150px;
 }
 
 #name {
-    height: 100px;
+    font-family: helvetica;
+    font-size: 4em;
+    font-variant: small-caps;
+    height: 150px;
+    margin-left: 200px;
+    position: absolute;
+    text-shadow: 1px 2px 1px lightgrey;
+    text-transform: lowercase;
+    top: 0;
 }
 
 #toolbox {
+    border: 1px solid;
+    position: fixed;
+    right: 0px;
+    top: 0px;
+}
+                                         
+#calsection {
+    font-family: "arial", "sans serif";
+    margin-top: 200px;
+    text-align: center;
+    width: 75%;
+}
+
+#artsection {
     float: right;
     height: 50px;
+    width: 25%;
+}
+
+/*
+ _              _ _               
+| |_ ___   ___ | | |__   _____  __
+| __/ _ \ / _ \| | '_ \ / _ \ \/ /
+| || (_) | (_) | | |_) | (_) >  < 
+ \__\___/ \___/|_|_.__/ \___/_/\_\
+                                  
+*/
+#username {
+    display: block;
+    float: left;
+    font-family: helvetica;
+    font-size: 3em;
+    font-weight: bold;
+    height: 70px;
+    letter-spacing: 0.02em;
+    line-height: 70px;
+    position: relative;
+    text-transform: lowercase;
+}
+
+#options {
+    
+}
+
+#options img {
+    height: 70px;
+    width: 70px;
+}
+
+/*
+            _   _      _           
+  __ _ _ __| |_(_) ___| | ___  ___ 
+ / _` | '__| __| |/ __| |/ _ \/ __|
+| (_| | |  | |_| | (__| |  __/\__ \
+ \__,_|_|   \__|_|\___|_|\___||___/
+                                   
+*/
+
+#articles {
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+#articles li {
+    list-style: none outside none;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+#articles li a {
+    color: #005689;
+    font-family: georgia;
+    font-size: 1.2em;
+    line-height: 1.25em;
+}
+
+#articles li p {
+
 }
 
 /*
@@ -29,22 +116,8 @@ ul, li {
  / __/ _` | |/ _ \ '_ \ / _` |/ _` | '__|
 | (_| (_| | |  __/ | | | (_| | (_| | |   
  \___\__,_|_|\___|_| |_|\__,_|\__,_|_|   
+
  */
-                                         
-#next, #prev {
-    color: inherit;
-    font-style: normal;
-    padding: 10px;
-    text-decoration: none;
-}
-
-#calsection {
-    font-family: "arial", "sans serif";
-    text-align: center;
-    height: 800px;
-    width: 80%;
-}
-
 #calsection > p {
     text-align: left;
 }
@@ -52,8 +125,17 @@ ul, li {
 #caltitle {
 }
 
+#next, #prev {
+    color: inherit;
+    font-style: normal;
+    padding: 10px;
+    text-decoration: none;
+}
+
 #calcontrol {
     float: right;
+    position: relative;
+    margin-right: 10px;
 }
 
 /* Week Calendar - wecal */
@@ -121,6 +203,15 @@ ul, li {
     font-size: 0.9em;
     height: 10px;
 }
+
+
+/*
+           _          
+ _ __ ___ (_)___  ___ 
+| '_ ` _ \| / __|/ __|
+| | | | | | \__ \ (__ 
+|_| |_| |_|_|___/\___|
+                      
 
 /* jQuery UI Resizable 1.8.11
 *
