mise en place de souscrire et desinscrire a un groupe

--- a/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
+++ b/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
@@ -12,7 +12,10 @@
 <br/>
 <li><a href="{{ path('Creategroup') }}">Cr&eacute;er un groupe</a></li>
 <br/>
-<li><a href="{{ path('Listgroup') }}">Lister groupe</a></li>
-
+<li><a href="{{ path('Listgroup') }}">Lister mes groupes cr&eacute;es</a></li>
+<br/>
+<li><a href="{{ path('ListAllgroup') }}">Lister Toutes les groupes</a></li>
+<br/>
+<li><a href="{{ path('Listsubscibedgroup') }}">Lister mes groupes abonnés</a></li>
 
 {% endblock %}
