Newsletterbundle finie a motie, prbleme d'envoi des mail avec le smtp.gmail.com

--- a/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
+++ b/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
@@ -18,4 +18,11 @@
 <br/>
 <li><a href="{{ path('Listsubscibedgroup') }}">Lister mes groupes abonnés</a></li>
 
+<br/>
+<li><a href="{{ path('Addsender') }}">inscrire de la news letter</a></li>
+<br/>
+<li><a href="{{ path('Deletesender') }}">desinscrire de la news letter</a></li>
+
+
+
 {% endblock %}
