--- a/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
+++ b/src/Application/UserBundle/Resources/views/User/UserIndex.html.twig
@@ -6,9 +6,9 @@
 <img src="{{ asset('uploads/avatar/')}}{{image}}" alt="avatar" />
 
 
-<li><a href="{{ path('Edituser') }}">Editer profil</a></li>
+<li><a href="{{ path('edituser') }}">Editer profil</a></li>
 <br/>
-<li><a href="{{ path('Deconnexion') }}">Deconnexion</a></li>
+<li><a href="{{ path('logout') }}">Deconnexion</a></li>
 <br/>
 <li><a href="{{ path('Creategroup') }}">Cr&eacute;er un groupe</a></li>
 <br/>
