--- a/src/Application/UserBundle/Resources/views/Login/Login.html.twig
+++ b/src/Application/UserBundle/Resources/views/Login/Login.html.twig
@@ -5,13 +5,20 @@
 {% block content %}
 <h1>Authentification</h1>
 
+{% if error %}
+    <div>{{ error.message }}</div>
+{% endif %}
 
+<form action="{{ path('_security_check') }}" method="post">
 
-<form action="#" method="post" enctype="multipart/form-data">
-    {{ form_field(form) }}
-	
-    <input type="submit" value="Valider" />    
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="_username" value="{{ last_username }}" />
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="_password" />
+
+  <input type="submit" name="login" />
 </form>
 
-<a href="{{ path('Adduser') }}">Cr&eacute;er un compte</a>
+<a href="{{ path('register') }}">Cr&eacute;er un compte</a>
 {% endblock %}
