--- a/src/Application/UserBundle/Resources/views/User/Add.html.twig
+++ b/src/Application/UserBundle/Resources/views/User/Add.html.twig
@@ -4,10 +4,10 @@
 
 {% block content %}
 <h1>Cr&eacute;er  utiliseur</h1>
-<form action="#" method="post" enctype="multipart/form-data">
+<form action="{{ path('register') }}" method="post" enctype="multipart/form-data">
     {{ form_field(form) }}
-	
-    <input type="submit" value="Valider" />    
+
+    <input type="submit" value="Valider" />
 </form>
 
 
