--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -57,13 +57,13 @@ body {
 #calsection {
     margin-top: 130px;
     text-align: center;
-    width: 75%;
+    width: 100%;
 }
 
 #artsection {
     float: right;
     height: 50px;
-    width: 25%;
+    width: 0%;
 }
 
 /*
@@ -290,6 +290,7 @@ body {
     border-bottom: 1px solid black;
     float: left;
     font-size: 0.8em;
+    height: 150px;
 }
 
 #calendar .daybox li {
