--- a/src/Application/OrganizerBundle/Resources/views/layout.html.twig
+++ b/src/Application/OrganizerBundle/Resources/views/layout.html.twig
@@ -7,15 +7,19 @@
         <link type="text/css" rel="stylesheet" href="{{ asset('css/sample.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ asset('css/style.css') }}">
         <script src="{{ asset('js/ckeditor.js') }}" type="text/javascript"></script>
-
-        <script src="{{ asset('js/prototype.js') }}" type="text/javascript"></script>
-
+        {% block headextended %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script type="text/javascript">
+          {% if user is defined %}
+          window.username = "{{ user.getUsername() }}"
+          {% endif %}
+          window.currentGroup = "G1"
+        </script>
         <script src="{{ asset('js/jquery-1.5.1.min.js') }}" type="text/javascript" ></script>
         <script src="{{ asset('js/jquery.tmpl.min.js') }}" type="text/javascript" ></script>
         <script src="{{ asset('js/jquery-ui-1.8.11.custom.min.js') }}" type="text/javascript" ></script>
-        <script src="{{ asset('js/calendar.js') }}" type="text/javascript" ></script>
+        {% block js %}{% endblock %}
     </body>
 </html>
