Adapted display to viewport
Calendar and chat now resize to fit window height

--- a/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
+++ b/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
@@ -43,7 +43,7 @@
 </div>
 <div id="mainwrapper">
 <div id="main">
-  <div id="calsection">
+  <div id="calsection" class="active">
     <p>
       <span id="caltitle">
         From <strong>{{ from.format('Y-m-d, D') }}</strong>
@@ -72,6 +72,8 @@
   </div>
   <div id="artsection">
     {# TODO afficher les articles dynamiquement #}
+  </div>
+  <div id="ovsection">
   </div>
 </div>
 </div>
