--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -83,7 +83,7 @@ __      _(_) __| | __ _  ___| |_ ___
 
 #widgets {
     border: solid 2px pink;
-    border-radius: 5px;
+    border-radius: 0 0 0 5px;
     margin-bottom: 10px;
     position: absolute;
     right: 0px;
@@ -247,9 +247,12 @@ __      _(_) __| | __ _  ___| |_ ___
 }
 
 #calendar {
-    max-height: 500px;
     overflow-y: scroll;
     position: relative;
+}
+
+#calendar > table {
+    width: 100%;
 }
 
 #calsection > p {
@@ -305,8 +308,6 @@ __      _(_) __| | __ _  ___| |_ ___
     border-right: 1px black solid;
     border-top: 1px black solid;
     border-bottom: 1px black solid;
-    float: left;
-    width: 13%;
 }
 
 #calendar .calumn > h5 {
@@ -316,6 +317,7 @@ __      _(_) __| | __ _  ___| |_ ___
 #calendar ul {
     border-top: 1px black solid;
     margin-top: 0px;
+    position: relative;
 }
 
 #calendar li.row {
