Mise en place des partenaires et des contacts dans le footer et rajout des meta tags description et keys pour le referencement (marketing)

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="description" content="1er collecticiel inter miage pour mieux organiser son parcours | Organizer">
+        <meta name="keywords" content="organizer, organisation cours, organiser, articles, chat 
+        site collaboratif, miage, cfa afia, Université Paris 1" >
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{% block title %}Hello Application{% endblock %}</title>
         <link type="text/css" rel="stylesheet" href="{{ asset('css/calendar.css') }}">
