--- a/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
+++ b/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
@@ -83,6 +83,23 @@
       <li><a id="chatwidget" href="http://google.com" class="switch widget" rel="chatsection"><span>Chat</span></a></li>
       <li><a id="ovwidget" href="http://google.com" class="switch widget" rel="ovsection"><span>Overview</span></a></li>
 </ul>
+<br/><br/>
+<div align="center">
+<b>PARTENAIRES</b>
+</div>
+<hr/>
+<div>    
+    <img src="{{ asset('images/footer_partenariat.png')}}" alt="Partenariats" />    
+</div>
+<div align="center">
+
+<b>CONTACTS:</b>
+<hr/>
+Jérôme Genoux : Apprentissage L3, M1.  Tél : 01 44 07 88 94 <br/>
+Emmanuelle Moreau : Classique L3, M1, M2. Tél : 01 44 07 88 67 <br/>
+Jessica Morti : Apprentissage M2. Tél : 01 53 55 27 45  <br/>
+    
+</div>
 {% endblock %}
 
 {% block js %}
