mise en place des logo de reseaux sociaux

--- a/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
+++ b/src/Application/OrganizerBundle/Resources/views/Organizer/index.twig.html
@@ -100,6 +100,21 @@ Emmanuelle Moreau : Classique L3, M1, M2. Tél : 01 44 07 88 67 <br/>
 Jessica Morti : Apprentissage M2. Tél : 01 53 55 27 45  <br/>
     
 </div>
+
+<div align="right">
+  <a target="_blank" href="http://www.facebook.com">
+  <img src="{{ asset('images/logo_facebook.png')}}" alt="Facebook" width="50" height="50" />
+  </a>
+  <a target="_blank" href="http://twitter.com">
+  <img src="{{ asset('images/logo_twitter.png')}}" alt="Twitter" width="50" height="50" />
+  </a>
+  <a target="_blank" href="https://www.linkedin.com">
+  <img src="{{ asset('images/logo_linkedIn.png')}}" alt="LinkedIn" width="50" height="50" />
+  </a>
+  <a target="_blank" href="http://www.viadeo.com">
+  <img src="{{ asset('images/logo_viadeo.png')}}" alt="viadeo" width="50" height="50" />
+  </a>    
+</div>
 {% endblock %}
 
 {% block js %}
